# inboxready-api

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  README.md  docker-compose.yml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml  container.yml  vercel-preview.yml  vercel-production.yml
API/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  ideas.md  index.py  launch-plan.md  pyproject.toml
API/src/inboxready_api/: billing.py  cache.py  cli.py  commerce.py  dashboard_insights.py  domain_validation.py  main.py  middleware.py  models.py  observability.py  remediation.py  security.py  settings.py  site_content.py  storage.py
API/src/inboxready_api/services/: batch_audit.py  compare.py  dns_audit.py  free_email.py  history.py  provider_detection.py  report.py  safe_http.py  scoring.py
API/src/inboxready_api/static/css/: site.css
API/src/inboxready_api/static/js/: app.js
API/src/inboxready_api/templates/: app.html  auth.html  base.html  changelog.html  dashboard.html  index.html  legal.html  ops.html  support.html
API/tests/: test_audit_logic.py  test_security_hardening.py  test_v02_features.py  test_v03_features.py
infra/: README.md  production-readiness.md  vercel-deployment.md
infra/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
infra/nginx/: nginx.conf
